<resources>
    <string name="app_name">My ApplicationPavelTest</string>
    <string name="sum">SUM</string>
    <string name="text"></string>
    <string name="button_sum">Sum</string>
    <string name="stringUSD">USD</string>
    <string name="stringHome_page">home page</string>
    <string name="Ok">Да</string>
    <string name="All_transactions">All</string>
    <string name="action_settings">new time</string>

    <string-array name="spinner_valuta">
        <item>USD</item>
        <item>RUB</item>
        <item>EUR</item>
        <item>CHF</item>
        <item>AUD</item>
        <item>AZN</item>
        <item>GBP</item>
        <item>AMD</item>
        <item>BYN</item>
        <item>BGN</item>
        <item>BRL</item>
        <item>HUF</item>
        <item>HKD</item>
        <item>DKK</item>
        <item>INR</item>
        <item>KZT</item>

    </string-array>

    <string-array name="spinner_valuta2">
        <item>USD</item>
        <item>RUB</item>
        <item>EUR</item>
        <item>CHF</item>
        <item>AUD</item>
        <item>AZN</item>
        <item>GBP</item>
        <item>AMD</item>
        <item>BYN</item>
        <item>BGN</item>
        <item>BRL</item>
        <item>HUF</item>
        <item>HKD</item>
        <item>DKK</item>
        <item>INR</item>
        <item>KZT</item>
    </string-array>


    <string-array name="Home_pageString">
        <item>Currency Converter</item>
        <item>Monetary assets</item>
        <item>Cash expenses</item>
    </string-array>
    
    
    <string-array name="targetLanguageArray">
        <item>RUS</item>
        <item>USD</item>
        <item>FRA</item>
    </string-array>

    <string name="ABCNews">ABC News</string>
    <string name="Canada">Canada</string>
    <string name="France">France</string>
    <string name="Australia">Australia</string>
    <string name="Russia">Russia</string>
    <string name="ArsTechnica">Ars Technica</string>
    <string name="AssociatedPress">Associated Press</string>
    <string name="BBCNews">BBC News</string>
    <string name="Bloomberg">Bloomberg</string>
    <string name="InfoMoney">InfoMoney</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ActionA">Добавить</string>
    <string name="ActionB">Показать все</string>
    <string name="find">Найти</string>
    <string name="app_name_Ok">Ok</string>
    <string name="Converter">Конвертер</string>
    <string name="Assets">Доходы</string>
    <string name="expenses">Затраты</string>
    <string name="News">Новости</string>
    <string name="noTitle">Нет описания</string>
    <string name="allsum">От всей суммы за весь период что было потрачено</string>
    <string name="ollAssets">От всей суммы за весь период что было приобретено</string>
    <string name="SelectNews">Сделать текущую новостную ленту, лентой по умолчанию.</string>
    <string name="are_you_sure">Вы уверены</string>
    <string name="No">Нет</string>
    <string name="positionSave">Страница закреплена</string>
    <string name="Share">Поделиться с ссылкой</string>
    <string name="voidList">Пусто</string>
    <string name="choiceLanguage">Выбрать язык перевода</string>
    <string name="translationText">Перевести Текст</string>
    <string name="selectLanguage">Выберете язык</string>
    <string name="SumInTheMoment">В Денег в наличии</string>
    <string name="selectAddress">Выбрать адресата SMS</string>
    <string name="textDialogSelectAddress">Укажите в поле название вашего банка</string>
    <string name="text_title">Потрачено</string>
    <string name="text_title_comment">КОМЕНТАРИЙ:</string>
    <string name="text_title_data">Дата:</string>

</resources>


















