<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:icon="@drawable/icons_home"
        android:id="@+id/action_news"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:title="@string/News" />

    <item
        android:id="@+id/action_converter"
        android:icon="@drawable/icons_monetary"
        android:title="@string/Converter"
        android:enabled="true"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_assets"
        android:icon="@drawable/icons_purse"
        android:title="@string/Assets"
        android:enabled="true"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_expenses"
        android:icon="@drawable/icons_expenses"
        android:title="@string/expenses"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

</menu>