<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/card_viewActivityList"
    android:layout_margin="2.5dp"
    android:layout_marginBottom="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_title"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:id="@+id/textView_ActivityList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            />

        <TextView
            android:id="@+id/textView_title_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_title_comment"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/textView_title_commentValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/textView_title_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/text_title_data"/>

        <TextView
            android:id="@+id/textView_title_data_exist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"/>
    </LinearLayout>



</android.support.v7.widget.CardView>
